--- a/html/bootstrap_grid_system.html
+++ b/html/bootstrap_grid_system.html
@@ -170,6 +170,80 @@
                             <section id="w-main">
                                 <h3>Система сеток Bootstrap 5</h3>
 
+                                <p>Система сеток Bootstrap построена на основе flexbox и позволяет размещать на странице
+                                    до 12 столбцов. <br>
+                                    <br>
+                                    Если вы не хотите использовать все 12 столбцов по отдельности, вы можете
+                                    сгруппировать их, чтобы создать более широкие
+                                    столбцы:
+                                </p>
+
+                                <div class="w3-responsive">
+                                    <table class="table grid">
+                                        <tbody>
+                                            <tr>
+                                                <td>span 1</td>
+                                                <td>span 1</td>
+                                                <td>span 1</td>
+                                                <td>span 1</td>
+                                                <td>span 1</td>
+                                                <td>span 1</td>
+                                                <td>span 1</td>
+                                                <td>span 1</td>
+                                                <td>span 1</td>
+                                                <td>span 1</td>
+                                                <td>span 1</td>
+                                                <td>span 1</td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="2">&nbsp;span 2</td>
+                                                <td colspan="2">&nbsp;span 2</td>
+                                                <td colspan="4">&nbsp;span 4</td>
+                                                <td colspan="2">&nbsp;span 2</td>
+                                                <td colspan="2">&nbsp;span 2</td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="3">span 3</td>
+                                                <td colspan="3">span 3</td>
+                                                <td colspan="5">span5</td>
+                                                <td colspan="1">span 1</td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="4">span 4</td>
+                                                <td colspan="4">span 4</td>
+                                                <td colspan="4">span 4</td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="5">span 5</td>
+                                                <td colspan="5">span 5</td>
+                                                <td colspan="2">span 2</td>
+                                            </tr>
+                                            <tr>
+                                                <td colspan="12">span 12</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
                             </section>
                         </div>
